UCL-136 correct paddings and spacing, but animation screwed now

--- a/src/Form/Wrapper/Wrapper/Wrapper.module.scss
+++ b/src/Form/Wrapper/Wrapper/Wrapper.module.scss
@@ -14,7 +14,7 @@
 
     &.floating-label-active {
       font-size: 0.75rem;
-      transform: translateY(-0.75rem);
+      transform: translateY(-0.8rem);
     }
 
     &.error {
